fixed white space beneath the header on the place mandate page

--- a/src/app/stockbrokingModule/pages/trade/place-mandate/place-mandate.scss
+++ b/src/app/stockbrokingModule/pages/trade/place-mandate/place-mandate.scss
@@ -1,4 +1,10 @@
 page-place-mandate {
+  // IOS specific styling, used to remove the padding beneath the header on ios devices
+  .scroll-content {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+  }
+
   ion-label {
     font-weight: bold !important;
   }
